Fix mobile spacing between last sections of process page

--- a/assets/css/pages/process.css
+++ b/assets/css/pages/process.css
@@ -439,7 +439,7 @@
     }
 
     #process-3 {
-        margin-bottom: var(--large-spacing) !important;
+        margin-bottom: calc(var(--large-spacing) * 4) !important;
     }
     .milestone {
         width:auto;
